# seventy

./: Cargo.toml  README.md  rustfmt.toml
examples/: Cargo.toml  generic.rs  generics.rs  read_me.rs  register.rs
seventy/: Cargo.toml
seventy-macros/: Cargo.toml
seventy-macros/src/: lib.rs  seventy.rs
seventy-macros/tests/: generics.rs  seventy.rs  upgrades_independent.rs
seventy-macros/tests/upgrades/: independent.rs  mod.rs
seventy-macros/tests/upgrades/independent/: mod.rs
seventy-macros/tests/upgrades/independent/disabled/: mod.rs
seventy-macros/tests/upgrades/independent/enabled/: mod.rs
seventy/src/: core.rs  lib.rs
seventy/src/builtins/: bundle.rs  char.rs  clamp.rs  collection.rs  compare.rs  credit_card.rs  debug.rs  email.rs  float.rs  mod.rs  op_assign.rs  op_logical.rs  operator.rs  option.rs  predicate.rs  string.rs  url.rs
test-suite/: Cargo.toml
test-suite/tests/: generics.rs  new_count.rs
