[package]
name = "seventy-macros"
version = "0.2.0"
edition = "2021"
authors = ["Michael Ni <michael.ni678@gmail.com>"]
repository = "https://github.com/michaelni678/seventy"
homepage = "https://github.com/michaelni678/seventy"
readme = "README.md"
license = "Apache-2.0"
keywords = ["newtype", "sanitization", "validation"]
description = "Procedural macros for Seventy"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
seventy = { workspace = true }
